--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,10 +14,61 @@
   --basic-space: 1rem;
 }
 
+@font-face {
+  font-family:Roboto;
+  src: url("../fonts/Roboto/Roboto-Regular.ttf");
+} 
+
 html {
   font-family: var(--basic-font-family);
   font-size: var(--basic-font-size);
   font-weight: var(--basic-font-weight);
   line-height: var(--basic-line-height);
   color: var(--basic-text-color);
+}
+
+.container {
+  max-width: var(--container-width);  
+  margin: var(--basic-space);
+}
+
+.d-flex {
+  display: flex;
+  text-align: center;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.timer {
+  margin-top: 2rem;
+  border: 1px solid #202020;
+  padding: var(--basic-space);
+  width: max-content;
+}
+
+.buttons {
+  margin: 10px;
+}
+
+.btn-1 {
+  border: 2px solid rgba(0, 92, 0, 0.878);
+  background-color: rgba(0, 68, 0, 0.707);
+}
+
+.btn-2 {
+  border: 2px solid rgba(102, 3, 3, 0.878);
+  background-color: rgba(68, 0, 0, 0.93);
+  color: white;
+}
+
+.btn {
+  border: none;
+  padding: 5px 13px;
+  border-radius: 40px;
+}
+
+.btn-3 {
+  border: 2px solid rgba(102, 3, 3, 0.878);
+  background-color: rgba(68, 0, 0, 0.93);
+  color: white;
 }
