--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,3 +21,101 @@ html {
   line-height: var(--basic-line-height);
   color: var(--basic-text-color);
 }
+
+@font-face {
+  font-family: lugrasimo;
+  src: url("../Lugrasimo-Regular.ttf");
+  font-weight: 400;
+}
+
+.d-flex {
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+  align-items: center;
+}
+
+.container {
+  background-color: black;
+  color: white;
+  padding: 1rem;
+  width: 100%;
+}
+
+.wrapper p {
+  font-family: "lugrasimo";
+  font-size: 2rem;
+}
+
+#search {
+  height: 1.5rem;
+  padding-left: 15px;
+  border-radius: 42px;
+  border: 2px solid white;
+  transition: .3s linear;
+}
+
+@media screen and (max-width: 500px) {
+  .container > .d-flex {
+    display: block;
+  }
+
+  form {
+    margin-top: 2rem;
+  }
+}
+
+main {
+  margin-top: 3rem;
+  background-color: rgba(227, 224, 224, 0.731);
+}
+
+.box-container {
+  padding: 2rem;
+}
+
+.box-wrapper {
+  flex-wrap: wrap;
+  row-gap: 2rem;
+}
+
+.card {
+  width: 18rem;
+  height: 20rem;
+  border: 2px solid black;
+  background-color: #fff;
+  border-radius: 15px;
+  box-shadow: 1px 2px 14px black;
+  padding: 1rem 0.5rem;
+}
+
+.card img {
+  max-height: 10rem;
+}
+
+.description p {
+  width: 15rem;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  white-space: pre-wrap;
+}
+
+.title {
+  font-family: "lugrasimo";
+  margin-top: 1rem;
+}
+
+.description {
+  width: 15rem;
+  margin-left: 0.5rem;
+  margin-top: 0.5rem;
+}
+
+
+footer {
+  background-color: black;
+  height: 4rem;
+  margin-top: 3rem;
+}
